Updated endpoint info

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
 <h3 id="http-request">HTTP Request</h3>
 
-<p><code class="prettyprint">GET http://www.async.ece.utah.edu/validate</code></p>
+<p><code class="prettyprint">POST http://www.async.ece.utah.edu/validate/</code></p>
 
 <h3 id="query-parameters">Query Parameters</h3>
 
