Updated to reflect returning a whole URI, but actually

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       </div>
         <ul class="toc-footer">
             <li><a href='http://www.async.ece.utah.edu/tools/sbol-validatorconverter'>About the SBOL Validator</a></li>
-            <li><a href='http://www.async.ece.utah.edu/validator/'>SBOL Validator</a></li>
+            <li><a href='http://www.async.ece.utah.edu/sbol-validator/'>SBOL Validator</a></li>
             <li><a href='http://www.github.com/SynBioDex/SBOL-Validator'>SBOL Validator GitHub repository</a></li>
             <li><a href='http://www.github.com/SynBioDex/SBOL-Validator-Documentation/issues'>Log an issue with the API reference</a></li>
             <li><a href='https://github.com/tripit/slate'>Documentation Powered by Slate</a></li>
@@ -179,7 +179,7 @@
   </span><span class="nt">"valid"</span><span class="p">:</span><span class="w"> </span><span class="kc">true</span><span class="p">,</span><span class="w">
   </span><span class="nt">"equality"</span><span class="p">:</span><span class="w"> </span><span class="kc">false</span><span class="p">,</span><span class="w">
   </span><span class="nt">"errors"</span><span class="p">:</span><span class="w"> </span><span class="p">[</span><span class="s2">""</span><span class="p">],</span><span class="w">
-  </span><span class="nt">"output_file"</span><span class="p">:</span><span class="w"> </span><span class="s2">"work/sequence1.gb"</span><span class="w">
+  </span><span class="nt">"output_file"</span><span class="p">:</span><span class="w"> </span><span class="s2">"http://www.async.ece.utah.edu/work/sequence1.gb"</span><span class="w">
 </span><span class="p">}</span><span class="w">
 </span></code></pre>
 <p>This endpoint validates SBOL and returns the address of a file in a specified format.</p>
