--- a/index.html
+++ b/index.html
@@ -319,9 +319,14 @@
 <td>Returns true if the file given is valid SBOL, or can be converted to valid SBOL</td>
 </tr>
 <tr>
-<td>equality</td>
+<td>check_equality</td>
 <td>false</td>
-<td>Meaningful only if the test_equality option is true, and is true if the two files have no differences</td>
+<td>Returns true if a comparison was run</td>
+</tr>
+<tr>
+<td><strong>equality</strong></td>
+<td><strong>false</strong></td>
+<td>Returns true if the two files are equal, false otherwise. <strong>Only returned if check_equality is true</strong></td>
 </tr>
 <tr>
 <td>errors</td>
