Updated to include file return info

--- a/index.html
+++ b/index.html
@@ -338,6 +338,11 @@
 <td>N/A</td>
 <td>The URI of the file requested</td>
 </tr>
+<tr>
+<td><strong>result</strong></td>
+<td><em>file contents</em></td>
+<td>The value of the output file, <strong>Only returned if return_file is true in the validation requsest</strong></td>
+</tr>
 </tbody></table>
 
       </div>
