--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       </div>
         <ul class="toc-footer">
             <li><a href='http://www.async.ece.utah.edu/tools/sbol-validatorconverter'>About the SBOL Validator</a></li>
-            <li><a href='http://www.async.ece.utah.edu/sbol-validator/'>SBOL Validator</a></li>
+            <li><a href='http://apps.nonasoftware.org/sbol-validator/'>SBOL Validator</a></li>
             <li><a href='http://www.github.com/SynBioDex/SBOL-Validator'>SBOL Validator GitHub repository</a></li>
             <li><a href='http://www.github.com/SynBioDex/SBOL-Validator-Documentation/issues'>Log an issue with the API reference</a></li>
             <li><a href='https://github.com/tripit/slate'>Documentation Powered by Slate</a></li>
@@ -148,9 +148,9 @@
           <span class="p">}</span>
 
 
-<span class="n">resp</span> <span class="o">=</span> <span class="n">requests</span><span class="o">.</span><span class="n">post</span><span class="p">(</span><span class="s">"http://www.async.ece.utah.edu/validate/"</span><span class="p">,</span> <span class="n">json</span><span class="o">=</span><span class="n">request</span><span class="p">)</span>
+<span class="n">resp</span> <span class="o">=</span> <span class="n">requests</span><span class="o">.</span><span class="n">post</span><span class="p">(</span><span class="s">"http://apps.nonasoftware.org/validate/"</span><span class="p">,</span> <span class="n">json</span><span class="o">=</span><span class="n">request</span><span class="p">)</span>
 </code></pre><pre class="highlight javascript"><code><span class="nx">request</span><span class="p">({</span> <span class="na">method</span><span class="p">:</span> <span class="s1">'POST'</span><span class="p">,</span>
-              <span class="na">uri</span><span class="p">:</span> <span class="s1">'http://www.async.ece.utah.edu/validate/'</span><span class="p">,</span>
+              <span class="na">uri</span><span class="p">:</span> <span class="s1">'http://apps.nonasoftware.org/validate/'</span><span class="p">,</span>
               <span class="s1">'content-type'</span><span class="p">:</span> <span class="s1">'application/json'</span><span class="p">,</span>
               <span class="na">json</span><span class="p">:</span> <span class="p">{</span> <span class="s1">'options'</span><span class="p">:</span> <span class="p">{</span>  <span class="s1">'language'</span> <span class="p">:</span> <span class="s1">'GenBank'</span><span class="p">,</span>
                                 <span class="s1">'test_equality'</span><span class="p">:</span> <span class="kc">false</span><span class="p">,</span>
@@ -186,7 +186,7 @@
 
 <h3 id="http-request">HTTP Request</h3>
 
-<p><code class="prettyprint">POST http://www.async.ece.utah.edu/validate/</code></p>
+<p><code class="prettyprint">POST http://apps.nonasoftware.org/validate/</code></p>
 
 <h3 id="query-parameters">Query Parameters</h3>
 
