Update form layout

--- a/src/validation-form/html/form.html
+++ b/src/validation-form/html/form.html
@@ -197,12 +197,17 @@
 				</form>
 			</div>
 		</div>
-	</div>
-	<footer class="footer">
-		<div class="container">
-			<p class="text-muted">v1.2 &bull; <a href="http://www.async.ece.utah.edu/tools/sbol-validatorconverter/">More info</a> &bull; To report any issues, or request new features, please use the <a href="https://www.github.com/SynBioDex/SBOL-Validator/issues">issue tracker</a> on GitHub.</p>
+		<div class="row">
+			<div class="col-md-2"></div>
+			<div class="col-md-8"><hr></div>
+			<div class="col-md-2"></div>
 		</div>
-	</footer>
+		<div class="row">
+			<div class="col-md-2"></div>
+			<div class="col-md-8"><span class="text-muted">v1.2 &bull; <a href="http://www.async.ece.utah.edu/tools/sbol-validatorconverter/">More info</a> &bull; To report any issues, or request new features, please use the <a href="https://www.github.com/SynBioDex/SBOL-Validator/issues">issue tracker</a> on GitHub.</span></div>
+			<div class="col-md-2"></div>
+		</div>
+	</div>
 	<div id="myModal" class="modal">
 		<div class="modal-content">
 			<span class="close" onclick='closeModal()'>x</span>
