Enable SBML button

--- a/src/validation-form/html/form.html
+++ b/src/validation-form/html/form.html
@@ -107,7 +107,7 @@
 									</div>
 									<div class="radio">
 										<label>
-											<input type="radio" name="output" value="SBML" id="sbml" disabled/> Output SBML
+											<input type="radio" name="output" value="SBML" id="sbml" /> Output SBML
 											<br />
 										</label>
 									</div>
