remove white space

--- a/src/validation-form/html/form.html
+++ b/src/validation-form/html/form.html
@@ -64,8 +64,7 @@
 									<input type="hidden" name="usePaste" id="usePaste" value="false" />
 									<label for="pasteInputFile">Main SBOL/GenBank/FASTA File
 									</label>
-									<textarea class="form-control" rows="10" id="pastedPrimaryInputFile" name="pastedPrimayInputFile">
-									</textarea>
+									<textarea class="form-control" rows="10" id="pastedPrimaryInputFile" name="pastedPrimayInputFile"></textarea>
 									<p class="help-block" id="primaryPasteHelp">
 										Paste an SBOL, GenBank, or FASTA file for validation/conversion.
 									</p>
@@ -73,8 +72,7 @@
 								<div class="form-group">
 									<label for="pasteInputFile">Comparison file
 									</label>
-									<textarea class="form-control" rows="10" id="pastedDiffInputFile" name="pastedDiffInputFile">
-									</textarea>
+									<textarea class="form-control" rows="10" id="pastedDiffInputFile" name="pastedDiffInputFile"></textarea>
 									<p class="help-block" id="diffPasteHelp">
 										Paste an SBOL for comparison.
 									</p>
