--- a/src/validation-form/html/form.html
+++ b/src/validation-form/html/form.html
@@ -13,7 +13,7 @@
 
 <body>
 	<h1 style="text-align: center">
-		SBOL Validator/Converter
+		SBOL Validator
 	</h1>
 	<div class="container-fluid">
 		<div class="row">
