Add GFF3 support

--- a/src/conversion-form/html/form.html
+++ b/src/conversion-form/html/form.html
@@ -86,7 +86,7 @@
 									</div>
 									<div class="radio">
 										<label>
-											<input type="radio" name="output" value="SBML" id="sbml" /> Output SBML
+											<input type="radio" name="output" value="GFF3" id="gff3" /> Output GFF3
 											<br />
 										</label>
 									</div>
