Add GFF3 to docs

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 <tr>
 <td>language</td>
 <td>&ldquo;SBOL2&rdquo;</td>
-<td>Selects the output file format from &ldquo;SBOL2&rdquo;, &ldquo;SBOL1&rdquo;, &ldquo;GenBank&rdquo;, and &ldquo;FASTA&rdquo;</td>
+<td>Selects the output file format from &ldquo;SBOL2&rdquo;, &ldquo;SBOL1&rdquo;, &ldquo;GenBank&rdquo;, &ldquo;FASTA&rdquo;, and &ldquo;GFF3&rdquo;</td>
 </tr>
 <tr>
 <td>test_equality</td>
