--- a/index.html
+++ b/index.html
@@ -1,130 +1,255 @@
+
 <!doctype html>
 <html>
   <head>
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>SBOL Validation API Reference</title>
+    <title>API Reference</title>
 
     <style>
       .highlight table td { padding: 5px; }
 .highlight table pre { margin: 0; }
-.highlight, .highlight .w {
-  color: #f8f8f2;
-  background-color: #272822;
+.highlight .gh {
+  color: #999999;
 }
-.highlight .err {
-  color: #272822;
-  background-color: #f92672;
+.highlight .sr {
+  color: #f6aa11;
 }
-.highlight .c, .highlight .cd, .highlight .cm, .highlight .c1, .highlight .cs {
+.highlight .go {
+  color: #888888;
+}
+.highlight .gp {
+  color: #555555;
+}
+.highlight .gs {
+}
+.highlight .gu {
+  color: #aaaaaa;
+}
+.highlight .nb {
+  color: #f6aa11;
+}
+.highlight .cm {
   color: #75715e;
 }
 .highlight .cp {
-  color: #f4bf75;
+  color: #75715e;
 }
-.highlight .nt {
-  color: #f4bf75;
+.highlight .c1 {
+  color: #75715e;
 }
-.highlight .o, .highlight .ow {
-  color: #f8f8f2;
+.highlight .cs {
+  color: #75715e;
 }
-.highlight .p, .highlight .pi {
-  color: #f8f8f2;
+.highlight .c, .highlight .cd {
+  color: #75715e;
 }
-.highlight .gi {
-  color: #a6e22e;
+.highlight .err {
+  color: #960050;
+}
+.highlight .gr {
+  color: #960050;
+}
+.highlight .gt {
+  color: #960050;
 }
 .highlight .gd {
-  color: #f92672;
+  color: #49483e;
 }
-.highlight .gh {
-  color: #66d9ef;
-  background-color: #272822;
-  font-weight: bold;
+.highlight .gi {
+  color: #49483e;
 }
-.highlight .k, .highlight .kn, .highlight .kp, .highlight .kr, .highlight .kv {
-  color: #ae81ff;
+.highlight .ge {
+  color: #49483e;
 }
 .highlight .kc {
-  color: #fd971f;
-}
-.highlight .kt {
-  color: #fd971f;
-}
-.highlight .kd {
-  color: #fd971f;
-}
-.highlight .s, .highlight .sb, .highlight .sc, .highlight .sd, .highlight .s2, .highlight .sh, .highlight .sx, .highlight .s1 {
-  color: #a6e22e;
-}
-.highlight .sr {
-  color: #a1efe4;
-}
-.highlight .si {
-  color: #cc6633;
-}
-.highlight .se {
-  color: #cc6633;
-}
-.highlight .nn {
-  color: #f4bf75;
-}
-.highlight .nc {
-  color: #f4bf75;
-}
-.highlight .no {
-  color: #f4bf75;
-}
-.highlight .na {
   color: #66d9ef;
 }
-.highlight .m, .highlight .mf, .highlight .mh, .highlight .mi, .highlight .il, .highlight .mo, .highlight .mb, .highlight .mx {
-  color: #a6e22e;
+.highlight .kd {
+  color: #66d9ef;
+}
+.highlight .kr {
+  color: #66d9ef;
+}
+.highlight .no {
+  color: #66d9ef;
+}
+.highlight .kt {
+  color: #66d9ef;
+}
+.highlight .mf {
+  color: #ae81ff;
+}
+.highlight .mh {
+  color: #ae81ff;
+}
+.highlight .il {
+  color: #ae81ff;
+}
+.highlight .mi {
+  color: #ae81ff;
+}
+.highlight .mo {
+  color: #ae81ff;
+}
+.highlight .m, .highlight .mb, .highlight .mx {
+  color: #ae81ff;
+}
+.highlight .sc {
+  color: #ae81ff;
+}
+.highlight .se {
+  color: #ae81ff;
 }
 .highlight .ss {
+  color: #ae81ff;
+}
+.highlight .sd {
+  color: #e6db74;
+}
+.highlight .s2 {
+  color: #e6db74;
+}
+.highlight .sb {
+  color: #e6db74;
+}
+.highlight .sh {
+  color: #e6db74;
+}
+.highlight .si {
+  color: #e6db74;
+}
+.highlight .sx {
+  color: #e6db74;
+}
+.highlight .s1 {
+  color: #e6db74;
+}
+.highlight .s {
+  color: #e6db74;
+}
+.highlight .na {
   color: #a6e22e;
 }
+.highlight .nc {
+  color: #a6e22e;
+}
+.highlight .nd {
+  color: #a6e22e;
+}
+.highlight .ne {
+  color: #a6e22e;
+}
+.highlight .nf {
+  color: #a6e22e;
+}
+.highlight .vc {
+  color: #ffffff;
+}
+.highlight .nn {
+  color: #ffffff;
+}
+.highlight .nl {
+  color: #ffffff;
+}
+.highlight .ni {
+  color: #ffffff;
+}
+.highlight .bp {
+  color: #ffffff;
+}
+.highlight .vg {
+  color: #ffffff;
+}
+.highlight .vi {
+  color: #ffffff;
+}
+.highlight .nv {
+  color: #ffffff;
+}
+.highlight .w {
+  color: #ffffff;
+}
+.highlight {
+  color: #ffffff;
+}
+.highlight .n, .highlight .py, .highlight .nx {
+  color: #ffffff;
+}
+.highlight .ow {
+  color: #f92672;
+}
+.highlight .nt {
+  color: #f92672;
+}
+.highlight .k, .highlight .kv {
+  color: #f92672;
+}
+.highlight .kn {
+  color: #f92672;
+}
+.highlight .kp {
+  color: #f92672;
+}
+.highlight .o {
+  color: #f92672;
+}
     </style>
-    <link href="stylesheets/screen.css" rel="stylesheet" media="screen" />
-    <link href="stylesheets/print.css" rel="stylesheet" media="print" />
-      <script src="javascripts/all_nosearch.js"></script>
+    <link href="stylesheets/screen-a1ce949a.css" rel="stylesheet" media="screen" />
+    <link href="stylesheets/print-bccf8c07.css" rel="stylesheet" media="print" />
+      <script src="javascripts/all_nosearch-c275c2f6.js"></script>
   </head>
 
   <body class="index" data-languages="[&quot;python&quot;,&quot;javascript&quot;]">
     <a href="#" id="nav-button">
       <span>
         NAV
-        <img src="images/navbar.png" alt="Navbar" />
+        <img src="images/navbar-cad8cdcb.png" alt="Navbar" />
       </span>
     </a>
-    <div class="tocify-wrapper">
-      <img src="images/logo.png" alt="Logo" />
+    <div class="toc-wrapper">
+      <img src="images/logo-1e815a84.png" class="logo" alt="Logo" />
         <div class="lang-selector">
               <a href="#" data-language-name="python">python</a>
               <a href="#" data-language-name="javascript">javascript</a>
         </div>
-      <div id="toc">
-      </div>
+      <ul id="toc" class="toc-list-h1">
+          <li>
+            <a href="#introduction" class="toc-h1 toc-link" data-title="Introduction">Introduction</a>
+          </li>
+          <li>
+            <a href="#validate-convert-file" class="toc-h1 toc-link" data-title="Validate/Convert File">Validate/Convert File</a>
+              <ul class="toc-list-h2">
+                  <li>
+                    <a href="#http-request" class="toc-h2 toc-link" data-title="HTTP Request">HTTP Request</a>
+                  </li>
+                  <li>
+                    <a href="#query-parameters" class="toc-h2 toc-link" data-title="Query Parameters">Query Parameters</a>
+                  </li>
+                  <li>
+                    <a href="#options" class="toc-h2 toc-link" data-title="Options">Options</a>
+                  </li>
+                  <li>
+                    <a href="#response" class="toc-h2 toc-link" data-title="Response">Response</a>
+                  </li>
+              </ul>
+          </li>
+      </ul>
         <ul class="toc-footer">
             <li><a href='http://www.async.ece.utah.edu/tools/sbol-validatorconverter'>About the SBOL Validator</a></li>
-            <li><a href='https://validator.sbolstandard.org/'>SBOL Validator</a></li>
-            <li><a href='http://www.github.com/SynBioDex/SBOL-Validator'>SBOL Validator GitHub repository</a></li>
-            <li><a href='http://www.github.com/SynBioDex/SBOL-Validator-Documentation/issues'>Log an issue with the API reference</a></li>
-            <li><a href='https://github.com/tripit/slate'>Documentation Powered by Slate</a></li>
+            <li><a href='https://validator.sbolstandard.org'>SBOL Validator</a></li>
+            <li><a href='https://github.com/synbiodex/sbol-validator'>GitHub</a></li>
         </ul>
     </div>
     <div class="page-wrapper">
       <div class="dark-box"></div>
       <div class="content">
-        <h1 id="introduction">Introduction</h1>
-
-<p>Welcome to the SBOL Validation/Conversion API! This API allows for the validation of documents encoded using the <a href="http://sbolstandard.org">SBOL</a> data standard.</p>
-
-<h1 id="validation-conversion">Validation/Conversion</h1>
-
-<h2 id="validate-convert-file">Validate/convert file</h2>
-<pre class="highlight python"><code><span class="kn">import</span> <span class="nn">requests</span>
+        <h1 id='introduction'>Introduction</h1>
+<p>Welcome to the SBOL Validation/Conversion API! This API allows for the validation of documents encoded using the <a href="https://sbolstandard.org">SBOL</a> data standard.</p>
+<h1 id='validate-convert-file'>Validate/Convert File</h1><h3 id='http-request'>HTTP Request</h3>
+<p><code>POST https://validator.sbolstandard.org/validate/</code></p>
+<pre class="highlight python tab-python"><code><span class="kn">import</span> <span class="nn">requests</span>
 
 
 <span class="nb">file</span> <span class="o">=</span> <span class="nb">open</span><span class="p">(</span><span class="s">"sequence1.xml"</span><span class="p">)</span><span class="o">.</span><span class="n">read</span><span class="p">()</span>
@@ -149,7 +274,7 @@
 
 
 <span class="n">resp</span> <span class="o">=</span> <span class="n">requests</span><span class="o">.</span><span class="n">post</span><span class="p">(</span><span class="s">"https://validator.sbolstandard.org/validate/"</span><span class="p">,</span> <span class="n">json</span><span class="o">=</span><span class="n">request</span><span class="p">)</span>
-</code></pre><pre class="highlight javascript"><code><span class="nx">request</span><span class="p">({</span> <span class="na">method</span><span class="p">:</span> <span class="s1">'POST'</span><span class="p">,</span>
+</code></pre><pre class="highlight javascript tab-javascript"><code><span class="nx">request</span><span class="p">({</span> <span class="na">method</span><span class="p">:</span> <span class="s1">'POST'</span><span class="p">,</span>
               <span class="na">uri</span><span class="p">:</span> <span class="s1">'http://validator.sbolvalidator.org/validate/'</span><span class="p">,</span>
               <span class="s1">'content-type'</span><span class="p">:</span> <span class="s1">'application/json'</span><span class="p">,</span>
               <span class="na">json</span><span class="p">:</span> <span class="p">{</span> <span class="s1">'options'</span><span class="p">:</span> <span class="p">{</span>  <span class="s1">'language'</span> <span class="p">:</span> <span class="s1">'GenBank'</span><span class="p">,</span>
@@ -171,25 +296,18 @@
                 <span class="p">}</span>
             <span class="p">},</span> <span class="kd">function</span><span class="p">(</span><span class="nx">err</span><span class="p">,</span> <span class="nx">response</span><span class="p">,</span> <span class="nx">body</span><span class="p">)</span> <span class="p">{}</span>
         <span class="p">);</span>
+
 </code></pre>
 <blockquote>
-<p>The above command returns JSON structured like this:</p>
+<p>The above command returns JSON structured like this</p>
 </blockquote>
-<pre class="highlight json"><code><span class="p">{</span><span class="w">
-  </span><span class="nt">"valid"</span><span class="p">:</span><span class="w"> </span><span class="kc">true</span><span class="p">,</span><span class="w">
-  </span><span class="nt">"equality"</span><span class="p">:</span><span class="w"> </span><span class="kc">false</span><span class="p">,</span><span class="w">
-  </span><span class="nt">"errors"</span><span class="p">:</span><span class="w"> </span><span class="p">[</span><span class="s2">""</span><span class="p">],</span><span class="w">
-  </span><span class="nt">"output_file"</span><span class="p">:</span><span class="w"> </span><span class="s2">"http://www.async.ece.utah.edu/work/sequence1.gb"</span><span class="w">
-</span><span class="p">}</span><span class="w">
-</span></code></pre>
-<p>This endpoint validates SBOL and returns the address of a file in a specified format.</p>
-
-<h3 id="http-request">HTTP Request</h3>
-
-<p><code class="prettyprint">POST http://validator.sbolvalidator.org/validate/</code></p>
-
-<h3 id="query-parameters">Query Parameters</h3>
-
+<pre class="highlight plaintext"><code>{
+  "valid": true,
+  "equality": false,
+  "errors": [""],
+  "output_file": "http://www.async.ece.utah.edu/work/sequence1.gb"
+}
+</code></pre><h3 id='query-parameters'>Query Parameters</h3>
 <table><thead>
 <tr>
 <th>Parameter</th>
@@ -223,9 +341,7 @@
 <td>A string containing the contents for the file to be compared against the main_file</td>
 </tr>
 </tbody></table>
-
-<h3 id="options">Options</h3>
-
+<h3 id='options'>Options</h3>
 <table><thead>
 <tr>
 <th>Parameter</th>
@@ -235,8 +351,8 @@
 </thead><tbody>
 <tr>
 <td>language</td>
-<td>&ldquo;SBOL2&rdquo;</td>
-<td>Selects the output file format from &ldquo;SBOL2&rdquo;, &ldquo;SBOL1&rdquo;, &ldquo;GenBank&rdquo;, &ldquo;FASTA&rdquo;, and &ldquo;GFF3&rdquo;</td>
+<td>“SBOL2”</td>
+<td>Selects the output file format from “SBOL2”, “SBOL1”, “GenBank”, “FASTA”, and “GFF3”</td>
 </tr>
 <tr>
 <td>test_equality</td>
@@ -271,7 +387,7 @@
 <tr>
 <td>subset_uri</td>
 <td>none</td>
-<td>A URI of a TopLevel described in the given SBOL file &ndash; the output will be only that TopLevel and its described children</td>
+<td>A URI of a TopLevel described in the given SBOL file – the output will be only that TopLevel and its described children</td>
 </tr>
 <tr>
 <td>uri_prefix</td>
@@ -290,18 +406,16 @@
 </tr>
 <tr>
 <td>main_file_name</td>
-<td>&ldquo;main file&rdquo;</td>
+<td>“main file”</td>
 <td>The name of the main file, only used for reporting differences between two files when test_equality is true</td>
 </tr>
 <tr>
 <td>diff_file_name</td>
-<td>&ldquo;comparison file&rdquo;</td>
+<td>“comparison file”</td>
 <td>The name of the secondary file (diff_file), only used in reporting differences between two files when test_equality is true</td>
 </tr>
 </tbody></table>
-
-<h3 id="response">Response</h3>
-
+<h2 id='response'>Response</h2>
 <table><thead>
 <tr>
 <th>Parameter</th>
@@ -320,14 +434,14 @@
 <td>Returns true if a comparison was run</td>
 </tr>
 <tr>
-<td><strong>equality</strong></td>
-<td><strong>false</strong></td>
-<td>Returns true if the two files are equal, false otherwise. <strong>Only returned if check_equality is true</strong></td>
+<td>equality</td>
+<td>false</td>
+<td>Returns true if the two files are equal, false otherwise. Only returned if check_equality is true</td>
 </tr>
 <tr>
 <td>errors</td>
-<td>[&ldquo;]</td>
-<td>&lsquo;errors&rsquo; is a bit of a misnomer, this is simply the output of running the validation split by lines</td>
+<td>[“]</td>
+<td>‘errors’ is a bit of a misnomer, this is simply the output of running the validation split by lines</td>
 </tr>
 <tr>
 <td>output_file</td>
@@ -335,9 +449,9 @@
 <td>The URI of the file requested</td>
 </tr>
 <tr>
-<td><strong>result</strong></td>
-<td><em>file contents</em></td>
-<td>The value of the output file, <strong>Only returned if return_file is true in the validation requsest</strong></td>
+<td>result</td>
+<td>file contents</td>
+<td>The value of the output file, Only returned if return_file is true in the validation request</td>
 </tr>
 </tbody></table>
 
