--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 
 <span class="n">resp</span> <span class="o">=</span> <span class="n">requests</span><span class="o">.</span><span class="n">post</span><span class="p">(</span><span class="s">"https://validator.sbolstandard.org/validate/"</span><span class="p">,</span> <span class="n">json</span><span class="o">=</span><span class="n">request</span><span class="p">)</span>
 </code></pre><pre class="highlight javascript tab-javascript"><code><span class="nx">request</span><span class="p">({</span> <span class="na">method</span><span class="p">:</span> <span class="s1">'POST'</span><span class="p">,</span>
-              <span class="na">uri</span><span class="p">:</span> <span class="s1">'http://validator.sbolvalidator.org/validate/'</span><span class="p">,</span>
+              <span class="na">uri</span><span class="p">:</span> <span class="s1">'https://validator.sbolvalidator.org/validate/'</span><span class="p">,</span>
               <span class="s1">'content-type'</span><span class="p">:</span> <span class="s1">'application/json'</span><span class="p">,</span>
               <span class="na">json</span><span class="p">:</span> <span class="p">{</span> <span class="s1">'options'</span><span class="p">:</span> <span class="p">{</span>  <span class="s1">'language'</span> <span class="p">:</span> <span class="s1">'GenBank'</span><span class="p">,</span>
                                 <span class="s1">'test_equality'</span><span class="p">:</span> <span class="kc">false</span><span class="p">,</span>
