Add support for snapgene files

--- a/src/validation-form/html/form.html
+++ b/src/validation-form/html/form.html
@@ -117,6 +117,12 @@
 									</div>
 									<div class="radio">
 										<label>
+											<input type="radio" name="output" value="SnapGene" id="snapgene" /> Output SnapGene
+											<br />
+										</label>
+									</div>
+									<div class="radio">
+										<label>
 											<input type="radio" name="output" value="FASTA" id="fasta" /> Output FASTA
 											<br />
 										</label>
