--- a/src/conversion-form/html/form.html
+++ b/src/conversion-form/html/form.html
@@ -74,6 +74,12 @@
 								<div class="form-group" id="fileOptions">
 									<div class="radio">
 										<label>
+											<input type="radio" name="output" value="SBOL3" id="sbol30" checked="checked" /> Output SBOL 2
+											<br />
+										</label>
+									</div>
+									<div class="radio">
+										<label>
 											<input type="radio" name="output" value="SBOL2" id="sbol20" checked="checked" /> Output SBOL 2
 											<br />
 										</label>
