Update more info

--- a/src/conversion-form/html/form.html
+++ b/src/conversion-form/html/form.html
@@ -153,7 +153,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-2"></div>
-			<div class="col-md-8"><span class="text-muted">v1.2 &bull; <a href="http://www.async.ece.utah.edu/tools/sbol-validatorconverter/">More info</a> &bull; To report any issues, or request new features, please use the <a href="https://www.github.com/SynBioDex/SBOL-Validator/issues">issue tracker</a> on GitHub.</span></div>
+			<div class="col-md-8"><span class="text-muted">v1.2 &bull; <a href="https://geneticlogiclab.org/author/sbol-validator/">More info</a> &bull; To report any issues, or request new features, please use the <a href="https://www.github.com/SynBioDex/SBOL-Validator/issues">issue tracker</a> on GitHub.</span></div>
 			<div class="col-md-2"></div>
 		</div>
 	</div>
