--- a/src/validation-form/html/form.html
+++ b/src/validation-form/html/form.html
@@ -1,4 +1,4 @@
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+f<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
 	<meta charset="utf-8" />
@@ -93,7 +93,7 @@
 								<div class="form-group" id="fileOptions">
 									<div class="radio">
 										<label>
-											<input type="radio" name="output" value="SBOL3" id="sbol30" checked="checked" /> Output SBOL 2
+											<input type="radio" name="output" value="SBOL3" id="sbol30" checked="checked" /> Output SBOL 3
 											<br />
 										</label>
 									</div>
