--- a/src/conversion-form/html/form.html
+++ b/src/conversion-form/html/form.html
@@ -71,13 +71,16 @@
 									</h3>
 							</div>
 							<div class="panel-body">
-								<div class="form-group" id="fileOptions">
+								<div
+                                                                  class="form-group" id="fileOptions">
+                                                                        <!--
 									<div class="radio">
 										<label>
 											<input type="radio" name="output" value="SBOL3" id="sbol32" /> Output SBOL 3
 											<br />
 										</label>
-									</div>
+                                                                        </div>
+                                                                        -->
 									<div class="radio">
 										<label>
 											<input type="radio" name="output" value="SBOL2" id="sbol20" checked="checked" /> Output SBOL 2
