--- a/src/validation-form/html/form.html
+++ b/src/validation-form/html/form.html
@@ -91,12 +91,13 @@ f<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 							</div>
 							<div class="panel-body">
 								<div class="form-group" id="fileOptions">
-									<div class="radio">
+									<!-- <div class="radio">
 										<label>
 											<input type="radio" name="output" value="SBOL3" id="sbol32" /> Output SBOL 3
 											<br />
 										</label>
 									</div>
+                                                                        -->
 									<div class="radio">
 										<label>
 											<input type="radio" name="output" value="SBOL2" id="sbol20" checked="checked" /> Output SBOL 2
